Index number based task schedule